[tool.poetry]
name = "sorting"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
package-mode = false
[tool.poetry]
name = "sorting"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.13"
streamlit = "*"
plotly = "*"
pandas = "*"
numpy = "*"
matplotlib = "*"

[tool.poetry.dependencies]
python = ">=3.13"
